# AI-Edge-Runtime-Platform

./: .gitignore  ARCHITECTURE_PLAN.md  Cargo.toml  DEVELOPMENT_ROADMAP.md  README.md  START_HERE.md  VISUAL_ARCHITECTURE.md
.github/workflows/: ci.yml
client/: package-lock.json  package.json
client/app/: globals.css  layout.tsx  page.tsx
client/components/: JobList.tsx
services/api-gateway/: Cargo.toml
services/api-gateway/src/: main.rs
services/runtime-service/: Cargo.toml  Dockerfile  docker-compose.yml
services/runtime-service/src/: executor.rs  main.rs  state.rs  types.rs
services/runtime-service/src/handlers/: execute.rs
services/tokio-examples/: Cargo.toml
services/tokio-examples/src/: main.rs
