[package]
name = "runtime-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["tokio", "http1", "http2"] }
tokio = { version = "1.36", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
hyper = { version = "0.14", features = ["server", "tcp", "stream"] }
tokio-stream = { version = "0.1", features = ["net"] }
axum-server = "0.4"
