[package]
name = "runtime-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["tokio", "http1", "http2", "ws"] }
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1", features = ["v4"] }
axum-server = "0.8"
futures-util = "0.3"
dashmap = "5"
once_cell = "1.17"
chrono = { version = "0.4", features = ["serde", "clock"] }
